--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -183,13 +183,13 @@ jobs:
           # #(已有) CONFIG_PACKAGE_luci-app-aria2=y # Aria2下载工具
           CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
           # CONFIG_PACKAGE_luci-app-asterisk=y #支持Asterisk电话服务器
-          CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
-          CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
-          CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
-          CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
-          CONFIG_PACKAGE_luci-app-caldav=y #联系人
-          CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
-          CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
+          # CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
+          # CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
+          # CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
+          # CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
+          # CONFIG_PACKAGE_luci-app-caldav=y #联系人
+          # CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
+          # CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
           CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
           # CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
           CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
@@ -217,7 +217,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
           CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
           CONFIG_PACKAGE_luci-app-shairplay=y #支持AirPlay功能
-          CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
+          # CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
           # CONFIG_PACKAGE_luci-app-simple-adblock=y #简单的广告拦截
           # #(已弃用) CONFIG_PACKAGE_luci-app-simple-softethervirtual=y #SoftEther virtual服务器 NAT穿透（已弃）
           CONFIG_PACKAGE_luci-app-splash=y #Client-Splash是无线MESH网络的一个热点认证系统
@@ -226,17 +226,17 @@ jobs:
           # 
           CONFIG_PACKAGE_luci-app-syncdial=y #多拨虚拟网卡(原macvlan)
           # 
-          CONFIG_PACKAGE_luci-app-tinyproxy=y #Tinyproxy是 HTTP(S)代理服务器
+          # CONFIG_PACKAGE_luci-app-tinyproxy=y #Tinyproxy是 HTTP(S)代理服务器
           CONFIG_PACKAGE_luci-app-transmission=y #BT下载工具
           CONFIG_PACKAGE_luci-app-unbound=y #Unbound DNS解析器
           CONFIG_PACKAGE_luci-app-upnp=y #通用即插即用UPnP(端口自动转发)
           CONFIG_PACKAGE_luci-app-usb-printer=y #USB 打印服务器
           CONFIG_PACKAGE_luci-app-v2ray-pro=y #V2Ray透明代理
-          CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS服务器设置
+          # CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS服务器设置
           CONFIG_PACKAGE_luci-app-vnstat=y #vnStat网络监控(图表)
           CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
           CONFIG_PACKAGE_luci-app-watchcat=y #断网检测功能与定时重启
-          CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
+          # CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
           CONFIG_PACKAGE_luci-app-wol=y #WOL网络唤醒
           #-------------↑--自己手动打开的功能--↑-------------
           
