--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -183,30 +183,30 @@ jobs:
           # #(已有) CONFIG_PACKAGE_luci-app-aria2=y # Aria2下载工具
           CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
           # CONFIG_PACKAGE_luci-app-asterisk=y #支持Asterisk电话服务器
-          CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
-          CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
-          CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
-          CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
-          CONFIG_PACKAGE_luci-app-caldav=y #联系人
-          CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
-          CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
+          # CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
+          # CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
+          # CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
+          # CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
+          # CONFIG_PACKAGE_luci-app-caldav=y #联系人
+          # CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
+          # CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
           CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
-          # CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
+          CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
           CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
           CONFIG_PACKAGE_luci-app-dnscrypt-dnsforwarder=y #DNSForwarder防DNS污染
-          # CONFIG_PACKAGE_luci-app-e2guardian=y #Web内容过滤器
+          CONFIG_PACKAGE_luci-app-e2guardian=y #Web内容过滤器
           CONFIG_PACKAGE_luci-app-filetransfer=y #文件传输
           CONFIG_PACKAGE_luci-app-firewall=y #添加防火墙
-          # CONFIG_PACKAGE_luci-app-flowoffload=y #Turbo ACC FLOW转发加速
+          CONFIG_PACKAGE_luci-app-flowoffload=y #Turbo ACC FLOW转发加速
           CONFIG_PACKAGE_luci-app-hd-idle=y #硬盘休眠
           CONFIG_PACKAGE_luci-app-hnet=y #Homenet Status家庭网络控制协议
-          # CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
+          CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
           # #(已有) CONFIG_PACKAGE_luci-app-minidlna=y #完全兼容DLNA / UPnP-AV客户端的服务器软件
           CONFIG_PACKAGE_luci-app-nlbwmon=y #网络带宽监视器
           # CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
           CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
           CONFIG_PACKAGE_luci-app-p910nd=y #打印服务器模块
-          # CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
+          CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
           CONFIG_PACKAGE_luci-app-pptp-server=y #virtual服务器 pptp
           # CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
           # CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
