--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -191,30 +191,30 @@ jobs:
           # CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
           # CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
           CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
-          CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
+          # CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
           CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
           CONFIG_PACKAGE_luci-app-dnscrypt-dnsforwarder=y #DNSForwarder防DNS污染
-          CONFIG_PACKAGE_luci-app-e2guardian=y #Web内容过滤器
+          # CONFIG_PACKAGE_luci-app-e2guardian=y #Web内容过滤器
           CONFIG_PACKAGE_luci-app-filetransfer=y #文件传输
           CONFIG_PACKAGE_luci-app-firewall=y #添加防火墙
-          CONFIG_PACKAGE_luci-app-flowoffload=y #Turbo ACC FLOW转发加速
+          # CONFIG_PACKAGE_luci-app-flowoffload=y #Turbo ACC FLOW转发加速
           CONFIG_PACKAGE_luci-app-hd-idle=y #硬盘休眠
           CONFIG_PACKAGE_luci-app-hnet=y #Homenet Status家庭网络控制协议
-          CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
+          # CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
           # #(已有) CONFIG_PACKAGE_luci-app-minidlna=y #完全兼容DLNA / UPnP-AV客户端的服务器软件
           CONFIG_PACKAGE_luci-app-nlbwmon=y #网络带宽监视器
-          # CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
+          CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
           CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
           CONFIG_PACKAGE_luci-app-p910nd=y #打印服务器模块
-          CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
+          # CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
           CONFIG_PACKAGE_luci-app-pptp-server=y #virtual服务器 pptp
-          # CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
-          # CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
-          # CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
+          CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
+          CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
+          CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
           CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
-          # CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
-          # CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
-          # CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
+          CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
+          CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
+          CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
           # CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
           CONFIG_PACKAGE_luci-app-shairplay=y #支持AirPlay功能
           # CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
