--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -183,10 +183,10 @@ jobs:
           # #(已有) CONFIG_PACKAGE_luci-app-aria2=y # Aria2下载工具
           CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
           # CONFIG_PACKAGE_luci-app-asterisk=y #支持Asterisk电话服务器
-          CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
-          CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
-          # CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
-          # CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
+          # CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
+          # CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
+          CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
+          CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
           # CONFIG_PACKAGE_luci-app-caldav=y #联系人
           # CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
           # CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
