--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -187,9 +187,9 @@ jobs:
           # CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
           # CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
           # CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
-          CONFIG_PACKAGE_luci-app-caldav=y #联系人
-          CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
-          # CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
+          # CONFIG_PACKAGE_luci-app-caldav=y #联系人
+          # CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
+          CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
           CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
           # CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
           CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
