--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -189,7 +189,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
           # CONFIG_PACKAGE_luci-app-caldav=y #联系人
           # CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
-          CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
+          # CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
           CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
           # CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
           CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
@@ -203,7 +203,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
           # #(已有) CONFIG_PACKAGE_luci-app-minidlna=y #完全兼容DLNA / UPnP-AV客户端的服务器软件
           CONFIG_PACKAGE_luci-app-nlbwmon=y #网络带宽监视器
-          # CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
+          CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
           CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
           CONFIG_PACKAGE_luci-app-p910nd=y #打印服务器模块
           # CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
