--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -203,14 +203,14 @@ jobs:
           # CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
           # #(已有) CONFIG_PACKAGE_luci-app-minidlna=y #完全兼容DLNA / UPnP-AV客户端的服务器软件
           CONFIG_PACKAGE_luci-app-nlbwmon=y #网络带宽监视器
-          CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
+          # CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
           CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
           CONFIG_PACKAGE_luci-app-p910nd=y #打印服务器模块
           # CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
           CONFIG_PACKAGE_luci-app-pptp-server=y #virtual服务器 pptp
-          # CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
-          # CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
-          # CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
+          CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
+          CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
+          CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
           CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
           # CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
           # CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
