--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -208,13 +208,13 @@ jobs:
           CONFIG_PACKAGE_luci-app-p910nd=y #打印服务器模块
           # CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
           CONFIG_PACKAGE_luci-app-pptp-server=y #virtual服务器 pptp
-          CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
-          CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
-          CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
+          # CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
+          # CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
+          # CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
           CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
-          # CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
-          # CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
-          # CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
+          CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
+          CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
+          CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
           # CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
           CONFIG_PACKAGE_luci-app-shairplay=y #支持AirPlay功能
           # CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
