--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -215,18 +215,18 @@ jobs:
           # CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
           # CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
           # CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
-          CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
+          # CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
           CONFIG_PACKAGE_luci-app-shairplay=y #支持AirPlay功能
-          CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
-          CONFIG_PACKAGE_luci-app-simple-adblock=y #简单的广告拦截
+          # CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
+          # CONFIG_PACKAGE_luci-app-simple-adblock=y #简单的广告拦截
           # #(已弃用) CONFIG_PACKAGE_luci-app-simple-softethervirtual=y #SoftEther virtual服务器 NAT穿透（已弃）
           CONFIG_PACKAGE_luci-app-splash=y #Client-Splash是无线MESH网络的一个热点认证系统
-          # CONFIG_PACKAGE_luci-app-sqm=y #流量智能队列管理(QOS)
+          CONFIG_PACKAGE_luci-app-sqm=y #流量智能队列管理(QOS)
           CONFIG_PACKAGE_luci-app-statistics=y #流量监控工具
           # 
           CONFIG_PACKAGE_luci-app-syncdial=y #多拨虚拟网卡(原macvlan)
           # 
-          # CONFIG_PACKAGE_luci-app-tinyproxy=y #Tinyproxy是 HTTP(S)代理服务器
+          CONFIG_PACKAGE_luci-app-tinyproxy=y #Tinyproxy是 HTTP(S)代理服务器
           CONFIG_PACKAGE_luci-app-transmission=y #BT下载工具
           CONFIG_PACKAGE_luci-app-unbound=y #Unbound DNS解析器
           CONFIG_PACKAGE_luci-app-upnp=y #通用即插即用UPnP(端口自动转发)
