--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -212,7 +212,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
           # CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
           CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
-          # CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
+          CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
           # CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
           # CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
           # CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
@@ -232,11 +232,11 @@ jobs:
           CONFIG_PACKAGE_luci-app-upnp=y #通用即插即用UPnP(端口自动转发)
           CONFIG_PACKAGE_luci-app-usb-printer=y #USB 打印服务器
           CONFIG_PACKAGE_luci-app-v2ray-pro=y #V2Ray透明代理
-          CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS服务器设置
+          # CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS服务器设置
           CONFIG_PACKAGE_luci-app-vnstat=y #vnStat网络监控(图表)
           CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
           CONFIG_PACKAGE_luci-app-watchcat=y #断网检测功能与定时重启
-          CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
+          # CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
           CONFIG_PACKAGE_luci-app-wol=y #WOL网络唤醒
           #-------------↑--自己手动打开的功能--↑-------------
           
