--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -177,19 +177,19 @@ jobs:
           CONFIG_PACKAGE_luci-app-accesscontrol=y #访问时间控制
           CONFIG_PACKAGE_luci-app-adblock=y #ADB广告过滤
           # #(已有) CONFIG_PACKAGE_luci-app-adbyby-plus=y #广告屏蔽大师Plus+
-          # CONFIG_PACKAGE_luci-app-ahcp=y #支持AHCPd
+          CONFIG_PACKAGE_luci-app-ahcp=y #支持AHCPd
           CONFIG_PACKAGE_luci-app-aliddns=y #阿里DDNS客户端
-          # CONFIG_PACKAGE_luci-app-amule=y #aMule下载工具
+          CONFIG_PACKAGE_luci-app-amule=y #aMule下载工具
           # #(已有) CONFIG_PACKAGE_luci-app-aria2=y # Aria2下载工具
           CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
-          # CONFIG_PACKAGE_luci-app-asterisk=y #支持Asterisk电话服务器
+          CONFIG_PACKAGE_luci-app-asterisk=y #支持Asterisk电话服务器
           CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
           CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
           CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
           CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
           CONFIG_PACKAGE_luci-app-caldav=y #联系人
           CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
-          # CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
+          # #(经 github 的 Actions 测试，编译不通过！) CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
           CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
           CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
           CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
@@ -214,7 +214,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
           CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
           CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
-          # CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
+          # #(经 github 的 Actions 测试，编译不通过！) CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
           CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
           CONFIG_PACKAGE_luci-app-shairplay=y #支持AirPlay功能
           CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
