18、在 17、版的基础上添加了修改固件大小的设置，以扩大系统空间。
18、在 17、版的基础上添加了修改固件大小的设置，以扩大系统空间。

--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -115,6 +115,12 @@ jobs:
           CONFIG_TARGET_x86_64_Generic=y
           EOF
 
+          # 设置固件大小:
+          cat >> .config <<EOF
+          CONFIG_TARGET_KERNEL_PARTSIZE=200
+          CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+          EOF
+          
           # 固件压缩:
           cat >> .config <<EOF
           CONFIG_TARGET_IMAGES_GZIP=y
