--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -180,70 +180,70 @@ jobs:
           CONFIG_PACKAGE_luci-app-wireguard=y
           CONFIG_PACKAGE_luci-app-wrtbwmon=y  #实时流量监测
           #-------------↓--自己手动打开的功能--↓-------------
-          CONFIG_PACKAGE_luci-app-accesscontrol=y #访问时间控制
-          CONFIG_PACKAGE_luci-app-adblock=y #ADB广告过滤
+          # CONFIG_PACKAGE_luci-app-accesscontrol=y #访问时间控制
+          # CONFIG_PACKAGE_luci-app-adblock=y #ADB广告过滤
           # #(已有) CONFIG_PACKAGE_luci-app-adbyby-plus=y #广告屏蔽大师Plus+
-          CONFIG_PACKAGE_luci-app-ahcp=y #支持AHCPd
-          CONFIG_PACKAGE_luci-app-aliddns=y #阿里DDNS客户端
-          CONFIG_PACKAGE_luci-app-amule=y #aMule下载工具
+          # CONFIG_PACKAGE_luci-app-ahcp=y #支持AHCPd
+          # CONFIG_PACKAGE_luci-app-aliddns=y #阿里DDNS客户端
+          # CONFIG_PACKAGE_luci-app-amule=y #aMule下载工具
           # #(已有) CONFIG_PACKAGE_luci-app-aria2=y # Aria2下载工具
-          CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
-          CONFIG_PACKAGE_luci-app-asterisk=y #支持Asterisk电话服务器
-          CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
-          CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
-          CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
-          CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
-          CONFIG_PACKAGE_luci-app-caldav=y #联系人
-          CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
+          # CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
+          # CONFIG_PACKAGE_luci-app-asterisk=y #支持Asterisk电话服务器
+          # CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
+          # CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
+          # CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
+          # CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
+          # CONFIG_PACKAGE_luci-app-caldav=y #联系人
+          # CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
           # #(经 github 的 Actions 测试，编译不通过！) CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
-          CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
-          CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
-          CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
-          CONFIG_PACKAGE_luci-app-dnscrypt-dnsforwarder=y #DNSForwarder防DNS污染
-          CONFIG_PACKAGE_luci-app-e2guardian=y #Web内容过滤器
-          CONFIG_PACKAGE_luci-app-filetransfer=y #文件传输
-          CONFIG_PACKAGE_luci-app-firewall=y #添加防火墙
-          CONFIG_PACKAGE_luci-app-flowoffload=y #Turbo ACC FLOW转发加速
-          CONFIG_PACKAGE_luci-app-hd-idle=y #硬盘休眠
-          CONFIG_PACKAGE_luci-app-hnet=y #Homenet Status家庭网络控制协议
-          CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
+          # CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
+          # CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
+          # CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
+          # CONFIG_PACKAGE_luci-app-dnscrypt-dnsforwarder=y #DNSForwarder防DNS污染
+          # CONFIG_PACKAGE_luci-app-e2guardian=y #Web内容过滤器
+          # CONFIG_PACKAGE_luci-app-filetransfer=y #文件传输
+          # CONFIG_PACKAGE_luci-app-firewall=y #添加防火墙
+          # CONFIG_PACKAGE_luci-app-flowoffload=y #Turbo ACC FLOW转发加速
+          # CONFIG_PACKAGE_luci-app-hd-idle=y #硬盘休眠
+          # CONFIG_PACKAGE_luci-app-hnet=y #Homenet Status家庭网络控制协议
+          # CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
           # #(已有) CONFIG_PACKAGE_luci-app-minidlna=y #完全兼容DLNA / UPnP-AV客户端的服务器软件
-          CONFIG_PACKAGE_luci-app-nlbwmon=y #网络带宽监视器
-          CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
-          CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
-          CONFIG_PACKAGE_luci-app-p910nd=y #打印服务器模块
-          CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
-          CONFIG_PACKAGE_luci-app-pptp-server=y #virtual服务器 pptp
-          CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
-          CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
-          CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
-          CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
-          CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
-          CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
+          # CONFIG_PACKAGE_luci-app-nlbwmon=y #网络带宽监视器
+          # CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
+          # CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
+          # CONFIG_PACKAGE_luci-app-p910nd=y #打印服务器模块
+          # CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
+          # CONFIG_PACKAGE_luci-app-pptp-server=y #virtual服务器 pptp
+          # CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
+          # CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
+          # CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
+          # CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
+          # CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
+          # CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
           # #(经 github 的 Actions 测试，编译不通过！) CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
-          CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
-          CONFIG_PACKAGE_luci-app-shairplay=y #支持AirPlay功能
-          CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
-          CONFIG_PACKAGE_luci-app-simple-adblock=y #简单的广告拦截
+          # CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
+          # CONFIG_PACKAGE_luci-app-shairplay=y #支持AirPlay功能
+          # CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
+          # CONFIG_PACKAGE_luci-app-simple-adblock=y #简单的广告拦截
           # #(已弃用) CONFIG_PACKAGE_luci-app-simple-softethervirtual=y #SoftEther virtual服务器 NAT穿透（已弃）
-          CONFIG_PACKAGE_luci-app-splash=y #Client-Splash是无线MESH网络的一个热点认证系统
-          CONFIG_PACKAGE_luci-app-sqm=y #流量智能队列管理(QOS)
-          CONFIG_PACKAGE_luci-app-statistics=y #流量监控工具
-          # 
-          CONFIG_PACKAGE_luci-app-syncdial=y #多拨虚拟网卡(原macvlan)
-          # 
-          CONFIG_PACKAGE_luci-app-tinyproxy=y #Tinyproxy是 HTTP(S)代理服务器
-          CONFIG_PACKAGE_luci-app-transmission=y #BT下载工具
-          CONFIG_PACKAGE_luci-app-unbound=y #Unbound DNS解析器
-          CONFIG_PACKAGE_luci-app-upnp=y #通用即插即用UPnP(端口自动转发)
-          CONFIG_PACKAGE_luci-app-usb-printer=y #USB 打印服务器
-          CONFIG_PACKAGE_luci-app-v2ray-pro=y #V2Ray透明代理
-          CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS服务器设置
-          CONFIG_PACKAGE_luci-app-vnstat=y #vnStat网络监控(图表)
-          CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
-          CONFIG_PACKAGE_luci-app-watchcat=y #断网检测功能与定时重启
-          CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
-          CONFIG_PACKAGE_luci-app-wol=y #WOL网络唤醒
+          # CONFIG_PACKAGE_luci-app-splash=y #Client-Splash是无线MESH网络的一个热点认证系统
+          # CONFIG_PACKAGE_luci-app-sqm=y #流量智能队列管理(QOS)
+          # CONFIG_PACKAGE_luci-app-statistics=y #流量监控工具
+          # # 
+          # CONFIG_PACKAGE_luci-app-syncdial=y #多拨虚拟网卡(原macvlan)
+          # # 
+          # CONFIG_PACKAGE_luci-app-tinyproxy=y #Tinyproxy是 HTTP(S)代理服务器
+          # CONFIG_PACKAGE_luci-app-transmission=y #BT下载工具
+          # CONFIG_PACKAGE_luci-app-unbound=y #Unbound DNS解析器
+          # CONFIG_PACKAGE_luci-app-upnp=y #通用即插即用UPnP(端口自动转发)
+          # CONFIG_PACKAGE_luci-app-usb-printer=y #USB 打印服务器
+          # CONFIG_PACKAGE_luci-app-v2ray-pro=y #V2Ray透明代理
+          # CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS服务器设置
+          # CONFIG_PACKAGE_luci-app-vnstat=y #vnStat网络监控(图表)
+          # CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
+          # CONFIG_PACKAGE_luci-app-watchcat=y #断网检测功能与定时重启
+          # CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
+          # CONFIG_PACKAGE_luci-app-wol=y #WOL网络唤醒
           #-------------↑--自己手动打开的功能--↑-------------
           
           #-------------↓--自己手动添加的第三方插件--↓-------------
